SUBDIRS = \
    alpine-base \
    alpine-base-consul \
    alpine-build \
    alpine-build-make \
    alpine-build-make-terraform \
    alpine-build-maven \
    alpine-build-npm \
    alpine-build-python \
    alpine-build-rpi \
    alpine-build-rpi-make \
    alpine-build-rpi-python \
    alpine-ansible \
    alpine-archiva \
    alpine-awscli \
    alpine-certbot \
    alpine-chronograf \
    alpine-cli53 \
    alpine-consul \
    alpine-dnsmasq \
    alpine-docker-compose \
    alpine-docker-machine \
    alpine-docker-registry \
    alpine-dovecot \
    alpine-dynamodb \
    alpine-elasticsearch \
    alpine-fabric \
    alpine-git \
    alpine-gogs \
    alpine-grafana \
    alpine-haproxy \
    alpine-hostapd \
    alpine-influxdb \
    alpine-java \
    alpine-jenkins \
    alpine-jenkins-slave \
    alpine-jetty \
    alpine-kapacitor \
    alpine-kibana \
    alpine-logstash \
    alpine-mariadb \
    alpine-mongodb \
    alpine-nginx \
    alpine-nodejs \
    alpine-nomad \
    alpine-opendkim \
    alpine-opendmarc \
    alpine-openldap \
    alpine-openssh \
    alpine-packer \
    alpine-passbolt \
    alpine-perl \
    alpine-php \
    alpine-phpmyadmin \
    alpine-portainer \
    alpine-postfix \
    alpine-postgresql \
    alpine-python \
    alpine-rabbitmq \
    alpine-rabbitmqadmin \
    alpine-redis \
    alpine-rng \
    alpine-roundcubemail \
    alpine-rsyslog \
    alpine-ruby \
    alpine-spark \
    alpine-strongswan \
    alpine-syncthing \
    alpine-telegraf \
    alpine-terraform \
    alpine-tomcat \
    alpine-unbound \
    alpine-xvfb \
    alpine-vault \
    alpine-wordpress \
    alpine-zabbix-agent \
    alpine-zabbix-frontend-php \
    alpine-zabbix-java-gateway \
    alpine-zabbix-monitor \
    alpine-zabbix-proxy-mysql \
    alpine-zabbix-proxy-pgsql \
    alpine-zabbix-proxy-sqlite3 \
    alpine-zabbix-server-mysql \
    alpine-zabbix-server-pgsql \
    alpine-zabbix-server-sqlite3
