SUBDIRS = \
    alpine-base \
    alpine-base-consul \
    alpine-backup \
    alpine-backup-mariadb \
    alpine-backup-postgresql \
    alpine-backup-rsync \
    alpine-backup-tar \
    alpine-build \
    alpine-build-make \
    alpine-build-go \
    alpine-build-make-ansible \
    alpine-build-make-packer \
    alpine-build-make-terraform \
    alpine-build-maven \
    alpine-build-npm \
    alpine-build-python \
    alpine-build-rpi \
    alpine-build-rpi-go \
    alpine-build-rpi-make \
    alpine-build-rpi-python \
    alpine-build-yarn \
    alpine-ansible \
    alpine-archiva \
    alpine-awscli \
    alpine-backuppc \
    alpine-certbot \
    alpine-chronograf \
    alpine-cli53 \
    alpine-consul \
    alpine-consul-cli \
    alpine-dnsmasq \
    alpine-docker-compose \
    alpine-docker-machine \
    alpine-docker-registry \
    alpine-dovecot \
    alpine-drone \
    alpine-drone-cli \
    alpine-dynamodb \
    alpine-elasticsearch \
    alpine-etcd \
    alpine-fabric \
    alpine-git \
    alpine-go \
    alpine-gogs \
    alpine-grafana \
    alpine-haproxy \
    alpine-hostapd \
    alpine-hugo \
    alpine-influxdb \
    alpine-java \
    alpine-jenkins \
    alpine-jenkins-slave \
    alpine-jetty \
    alpine-kapacitor \
    alpine-kibana \
    alpine-logstash \
    alpine-mailhog \
    alpine-mariadb \
    alpine-ndppd \
    alpine-nginx \
    alpine-node-red \
    alpine-nodejs \
    alpine-nomad \
    alpine-opendkim \
    alpine-opendmarc \
    alpine-openldap \
    alpine-openssh \
    alpine-packer \
    alpine-passbolt \
    alpine-perl \
    alpine-php \
    alpine-phpmyadmin \
    alpine-portainer \
    alpine-postfix \
    alpine-postgresql \
    alpine-python \
    alpine-rabbitmq \
    alpine-rabbitmqadmin \
    alpine-redis \
    alpine-rng \
    alpine-roundcubemail \
    alpine-rsyslog \
    alpine-ruby \
    alpine-rundeck \
    alpine-spark \
    alpine-strongswan \
    alpine-syncthing \
    alpine-telegraf \
    alpine-terraform \
    alpine-tomcat \
    alpine-unbound \
    alpine-vault \
    alpine-wordpress \
    alpine-zabbix-agent \
    alpine-zabbix-frontend-php \
    alpine-zabbix-java-gateway \
    alpine-zabbix-monitor \
    alpine-zabbix-proxy-mysql \
    alpine-zabbix-proxy-pgsql \
    alpine-zabbix-proxy-sqlite \
    alpine-zabbix-server-mysql \
    alpine-zabbix-server-pgsql
    alpine-wordpress
