SUBDIRS = \
    alpine-base \
	alpine-base-confd \
    alpine-base-consul \
    alpine-backup \
    alpine-backup-mariadb \
    alpine-backup-postgresql \
    alpine-backup-rsync \
    alpine-backup-tar \
    alpine-build \
    alpine-build-make \
    alpine-build-go \
    alpine-build-make-ansible \
    alpine-build-make-packer \
    alpine-build-make-terraform \
    alpine-build-maven \
    alpine-build-nodejs-npm \
    alpine-build-nodejs-yarn \
    alpine-build-python \
    alpine-build-rpi \
    alpine-build-rpi-make \
    alpine-build-rpi-python \
    alpine-ansible \
    alpine-archiva \
	alpine-certbot \
    alpine-chronograf \
    alpine-consul \
    alpine-dnsmasq \
	alpine-docker \
    alpine-docker-registry \
    alpine-dovecot \
    alpine-drone \
    alpine-drone-cli \
    alpine-elasticsearch \
    alpine-etcd \
    alpine-fabric \
    alpine-git \
    alpine-go \
    alpine-gogs \
    alpine-grafana \
    alpine-haproxy \
    alpine-hostapd \
    alpine-hugo \
    alpine-influxdb \
    alpine-java \
    alpine-jenkins \
    alpine-jetty \
    alpine-kapacitor \
    alpine-kibana \
    alpine-logstash \
    alpine-mailhog \
    alpine-mariadb \
	alpine-n8n \
    alpine-ndppd \
    alpine-nginx \
    alpine-node-red \
    alpine-nodejs \
    alpine-nomad \
	alpine-odoo \
    alpine-opendkim \
    alpine-opendmarc \
    alpine-openldap \
    alpine-openssh \
	alpine-openvpn \
    alpine-packer \
    alpine-perl \
    alpine-php \
    alpine-phpmyadmin \
    alpine-portainer \
    alpine-postfix \
    alpine-postgresql \
    alpine-python \
	alpine-rabbitmq \
    alpine-redis \
    alpine-rng \
    alpine-roundcubemail \
    alpine-rsyslog \
    alpine-ruby \
    alpine-rundeck \
    alpine-spark \
    alpine-strongswan \
    alpine-syncthing \
    alpine-telegraf \
    alpine-terraform \
    alpine-tomcat \
    alpine-traefik \
    alpine-unbound \
    alpine-vault \
    alpine-wordpress
